--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -972,7 +972,6 @@ functions:
         PATH="$path_value"                              \
             AWS_PROFILE=${aws_profile_remote}           \
             ${gcov_environment}                         \
-            ${rlp_environment}                          \
             ${lang_environment}                         \
             ${san_options}                              \
             ${san_symbolizer}                           \
@@ -4948,14 +4947,6 @@ tasks:
       resmoke_jobs_max: 1
 
 - <<: *task_template
-  name: rlp
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=rlp --storageEngine=wiredTiger
-
-- <<: *task_template
   name: read_concern_linearizable_passthrough
   depends_on:
   - name: jsCore
@@ -8254,8 +8245,7 @@ buildvariants:
     push_bucket: downloads.10gen.com
     push_name: linux
     push_arch: x86_64-enterprise-rhel62
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     has_packages: true
@@ -8426,7 +8416,6 @@ buildvariants:
   - name: retryable_writes_jscore_stepdown_passthrough
     distros:
     - rhel62-large
-  - name: rlp
   - name: sasl
   - name: session_jscore_passthrough
   - name: sharded_collections_jscore_passthrough
@@ -8469,8 +8458,7 @@ buildvariants:
   - rhel62-small
   expansions:
     test_flags: --majorityReadConcern=off --excludeWithAnyTags=requires_mmapv1,requires_majority_read_concern,uses_change_streams
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     repo_edition: enterprise
@@ -8580,7 +8568,6 @@ buildvariants:
     distros:
     - rhel62-large
   - name: retryable_writes_jscore_passthrough_gen
-  - name: rlp
   - name: sasl
   - name: session_jscore_passthrough
   - name: sharded_collections_jscore_passthrough
@@ -10370,9 +10357,8 @@ buildvariants:
   - rhel62-small
   batchtime: 1440 # 1 day
   expansions:
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
     test_flags: --storageEngine=inMemory --excludeWithAnyTags=requires_persistence,requires_journaling,requires_mmapv1,uses_transactions
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     scons_cache_scope: shared
@@ -10475,7 +10461,6 @@ buildvariants:
   - name: replica_sets_jscore_passthrough
   - name: retryable_writes_jscore_passthrough_gen
   - name: retryable_writes_jscore_stepdown_passthrough
-  - name: rlp
   - name: rollback_fuzzer_gen
   - name: sasl
   - name: session_jscore_passthrough
@@ -11258,12 +11243,9 @@ buildvariants:
   expansions:
     # Transactions are not supported on the MMAPv1 storage engine.
     test_flags: --storageEngine=mmapv1 --excludeWithAnyTags=requires_wiredtiger,uses_transactions,requires_document_locking,requires_majority_read_concern,uses_change_streams
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
     compile_flags: >-
       --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release
       --variables-files=etc/scons/mongodbtoolchain_gcc.vars
-      CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include"
-      --use-basis-tech-rosette-linguistics-platform=on
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     has_packages: true
@@ -11347,7 +11329,6 @@ buildvariants:
   - name: replica_sets_jscore_passthrough
     distros:
     - rhel62-large
-  - name: rlp
   - name: rollback_fuzzer_gen
   - name: serial_run
   - name: sharded_collections_jscore_passthrough
