--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -730,7 +730,6 @@ functions:
           PATH="$path_value"                              \
               AWS_PROFILE=${aws_profile_remote}           \
               ${gcov_environment}                         \
-              ${rlp_environment}                          \
               ${lang_environment}                         \
               ${san_options}                              \
               ${san_symbolizer}                           \
@@ -4539,24 +4538,6 @@ tasks:
       resmoke_args: --suites=concurrency jstests/concurrency/fsm_all_simultaneous.js --storageEngine=wiredTiger
 
 - <<: *task_template
-  name: rlp
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=rlp --storageEngine=mmapv1
-      run_multiple_jobs: true
-
-- <<: *task_template
-  name: rlp_WT
-  commands:
-  - func: "do setup"
-  - func: "run tests"
-    vars:
-      resmoke_args: --suites=rlp --storageEngine=wiredTiger
-      run_multiple_jobs: true
-
-- <<: *task_template
   name: read_concern_linearizable_passthrough
   depends_on:
   - name: jsCore
@@ -7417,8 +7398,7 @@ buildvariants:
     push_bucket: downloads.10gen.com
     push_name: linux
     push_arch: x86_64-enterprise-rhel62
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
@@ -7586,7 +7566,6 @@ buildvariants:
   - name: retryable_writes_jscore_stepdown_passthrough_WT
     distros:
     - rhel62-large
-  - name: rlp_WT
   - name: sasl
   - name: secondary_reads_passthrough
     distros:
@@ -7644,8 +7623,7 @@ buildvariants:
   run_on:
   - rhel62-small
   expansions:
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     test_flags: --majorityReadConcern=off --excludeWithAnyTags=requires_mmapv1,requires_majority_read_concern
     multiversion_platform: rhel62
     multiversion_edition: enterprise
@@ -7763,7 +7741,6 @@ buildvariants:
   - name: retryable_writes_jscore_passthrough_WT
     distros:
     - rhel62-large
-  - name: rlp_WT
   - name: sasl
   - name: session_jscore_passthrough_WT
   - name: sharded_collections_jscore_passthrough_WT
@@ -9193,9 +9170,8 @@ buildvariants:
   - rhel62-small
   batchtime: 1440 # 1 day
   expansions:
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
     test_flags: --storageEngine=inMemory --excludeWithAnyTags=requires_persistence,requires_journaling
-    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_gcc.vars CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include" --use-basis-tech-rosette-linguistics-platform=on
+    compile_flags: --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --variables-files=etc/scons/mongodbtoolchain_gcc.vars
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
@@ -9292,7 +9268,6 @@ buildvariants:
   - name: replica_sets_jscore_fcv34_passthrough
   - name: retryable_writes_jscore_passthrough_WT
   - name: retryable_writes_jscore_stepdown_passthrough_WT
-  - name: rlp
   - name: rollback_fuzzer_WT
   - name: sasl
   - name: session_jscore_passthrough_WT
@@ -10082,12 +10057,9 @@ buildvariants:
   batchtime: 1440 # 1 day
   expansions:
     test_flags: --storageEngine=mmapv1 --excludeWithAnyTags=requires_wiredtiger,requires_document_locking,requires_majority_read_concern
-    rlp_environment: MONGOD_UNITTEST_RLP_LANGUAGE_TEST_BTROOT=/opt/basis
     compile_flags: >-
       --ssl MONGO_DISTMOD=rhel62 -j$(grep -c ^processor /proc/cpuinfo) --release
       --variables-files=etc/scons/mongodbtoolchain_gcc.vars
-      CPPPATH="/opt/basis/rlp/rlp/include /opt/basis/rlp/utilities/include"
-      --use-basis-tech-rosette-linguistics-platform=on
     multiversion_platform: rhel62
     multiversion_edition: enterprise
     num_jobs_available: $(grep -c ^processor /proc/cpuinfo)
@@ -10175,7 +10147,6 @@ buildvariants:
   - name: replica_sets_resync_static_jscore_passthrough
     distros:
     - rhel62-large
-  - name: rlp
   - name: rollback_fuzzer
   - name: serial_run
   - name: sharded_collections_jscore_passthrough
