--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -27,6 +27,8 @@ concurrency_replication_multiversion:
 concurrency_sharded_replication_multiversion:
 
 replica_sets_jscore_multiversion_passthrough:
+- ticket: SERVER-44260
+  test_file: jstests/core/txns/new_transaction_waits_for_previous_txn_table_updates.js
 
 replica_sets_multiversion:
 - ticket: SERVER-42825
