SERVER-32871 Invalidate CatalogCache entries when ShardRegistry reload discovers a shard has been removed
(cherry picked from commit 6ea81c883e7297be99884185c908c7ece385caf8)

--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -91,6 +91,7 @@ selector:
   - jstests/sharding/restart_transactions.js
   - jstests/sharding/shard7.js
   - jstests/sharding/shard_config_db_collections.js
+  - jstests/sharding/shard_removal_triggers_catalog_cache_invalidation.js
   - jstests/sharding/unsharded_collection_targetting.js
   - jstests/sharding/array_shard_key.js
   - jstests/sharding/update_immutable_fields.js
