SERVER-34722 Add new server status metrics about oplog application
(cherry picked from commit 9b3801e457c4952e36f2a13d45387d647c301e03)

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -1276,6 +1276,9 @@ env.Library(
         '$BUILD_DIR/mongo/executor/task_executor_interface',
         '$BUILD_DIR/mongo/rpc/command_status',
     ],
+    LIBDEPS_PRIVATE={
+        '$BUILD_DIR/mongo/db/commands/server_status_core',
+    }
 )
 
 env.CppUnitTest(
