--- a/src/mongo/platform/SConscript
+++ b/src/mongo/platform/SConscript
@@ -11,6 +11,7 @@ env.CppUnitTest('endian_test', 'endian_test.cpp')
 env.CppUnitTest('mutex_test', 'mutex_test.cpp')
 env.CppUnitTest('process_id_test', 'process_id_test.cpp')
 env.CppUnitTest('random_test', 'random_test.cpp')
+env.CppUnitTest('source_location_test', 'source_location_test.cpp')
 env.CppUnitTest('stack_locator_test', 'stack_locator_test.cpp')
 env.CppUnitTest('decimal128_test', 'decimal128_test.cpp')
 env.CppUnitTest('decimal128_bson_test', 'decimal128_bson_test.cpp')
