--- a/src/mongo/stdx/SConscript
+++ b/src/mongo/stdx/SConscript
@@ -13,3 +13,13 @@ env.Benchmark(
     ],
 )
 
+# Not a CppUnitTest because it needs low-level control of thread creation and signals,
+# so it shouldn't use unittest_main and typical mongo startup routines.
+env.RegisterUnitTest(env.Program(
+    target='sigaltstack_location_test',
+    source=[
+        'sigaltstack_location_test.cpp',
+    ],
+    LIBDEPS=[
+    ]
+)[0])
