SERVER-42892 Create set and key types for hierarchical locking
(cherry picked from commit 081a51065ac9b855a0d9e07d88701910b547ad96)

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -539,6 +539,7 @@ icuEnv.CppUnitTest(
         'future_test_promise_int.cpp',
         'future_test_promise_void.cpp',
         'future_test_shared_future.cpp',
+        'hierarchical_acquisition_test.cpp',
         'icu_test.cpp',
         'invalidating_lru_cache_test.cpp',
         'itoa_test.cpp',
