--- a/buildscripts/resmokeconfig/suites/replica_sets_multi_stmt_txn_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_multi_stmt_txn_jscore_passthrough.yml
@@ -86,6 +86,7 @@ selector:
   - jstests/core/and.js
   - jstests/core/collation.js
   - jstests/core/distinct_multikey_dotted_path.js
+  - jstests/core/distinct_with_hashed_index.js
   - jstests/core/explain_shell_helpers.js
   - jstests/core/index_partial_read_ops.js
   - jstests/core/optimized_match_explain.js
