SERVER-44858 Implement speculative sasl auth
 create mode 100644 jstests/auth/speculative-auth-replset.js
 create mode 100644 jstests/auth/speculative-sasl-start.js
 create mode 100644 jstests/ssl/speculative-auth-replset.js
 create mode 100644 jstests/ssl/speculative-authenticate.js
 create mode 100644 src/mongo/db/auth/sasl_commands.h
 create mode 100644 src/mongo/db/s/balancer/core_options_stub.cpp

--- a/src/mongo/client/SConscript
+++ b/src/mongo/client/SConscript
@@ -139,6 +139,9 @@ env.Library(
         '$BUILD_DIR/mongo/executor/remote_command',
         'sasl_client'
     ],
+    LIBDEPS_PRIVATE=[
+        'connection_string',
+    ],
 )
 
 env.Library(
