SERVER-44345 stack trace all threads

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -378,7 +378,12 @@ env.Library(
     ],
 )
 
-env.Library(
+signalEnv = env.Clone()
+
+if use_libunwind:
+    signalEnv.InjectThirdParty('unwind')
+
+signalEnv.Library(
     target="signal_handlers",
     source=[
         "signal_handlers.cpp",
