SERVER-44699: Clean up exhaust cursors when the network session is closed

--- a/src/mongo/transport/SConscript
+++ b/src/mongo/transport/SConscript
@@ -105,6 +105,7 @@ env.Library(
     ],
     LIBDEPS=[
         '$BUILD_DIR/mongo/db/auth/authentication_restriction',
+        '$BUILD_DIR/mongo/db/dbmessage',
         '$BUILD_DIR/mongo/db/server_options_core',
         '$BUILD_DIR/mongo/db/service_context',
         '$BUILD_DIR/mongo/db/stats/counters',
