--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -454,6 +454,7 @@ env.CppUnitTest(
         'config/sharding_catalog_manager_create_database_test.cpp',
         'config/sharding_catalog_manager_drop_coll_test.cpp',
         'config/sharding_catalog_manager_enable_sharding_test.cpp',
+        'config/sharding_catalog_manager_ensure_chunk_version_is_greater_than_test.cpp',
         'config/sharding_catalog_manager_merge_chunks_test.cpp',
         'config/sharding_catalog_manager_remove_shard_from_zone_test.cpp',
         'config/sharding_catalog_manager_remove_shard_test.cpp',
