SERVER-43720 Add default read write concern commands to mongos and config server

--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -79,6 +79,7 @@ env.Library(
         'cluster_repl_set_get_status_cmd.cpp',
         'cluster_reset_error_cmd.cpp',
         'cluster_restart_catalog_command.cpp',
+        'cluster_rwc_defaults_commands.cpp',
         'cluster_set_index_commit_quorum_cmd.cpp',
         'cluster_set_feature_compatibility_version_cmd.cpp',
         'cluster_set_free_monitoring.cpp' if get_option("enable-free-mon") == 'on' else [],
@@ -116,6 +117,7 @@ env.Library(
         '$BUILD_DIR/mongo/db/ftdc/ftdc_server',
         '$BUILD_DIR/mongo/db/shared_request_handling',
         '$BUILD_DIR/mongo/db/logical_session_cache_impl',
+        '$BUILD_DIR/mongo/db/read_write_concern_defaults',
         '$BUILD_DIR/mongo/db/pipeline/aggregation',
         '$BUILD_DIR/mongo/db/query/command_request_response',
         '$BUILD_DIR/mongo/db/query/map_reduce_output_format',
