--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -262,6 +262,7 @@ env.Library(
         'config/configsvr_drop_collection_command.cpp',
         'config/configsvr_drop_database_command.cpp',
         'config/configsvr_enable_sharding_command.cpp',
+        'config/configsvr_ensure_chunk_version_is_greater_than_command.cpp',
         'config/configsvr_merge_chunk_command.cpp',
         'config/configsvr_move_chunk_command.cpp',
         'config/configsvr_move_primary_command.cpp',
