--- a/src/mongo/s/commands/SConscript
+++ b/src/mongo/s/commands/SConscript
@@ -98,6 +98,9 @@ env.Library(
         env.Idlc('cluster_multicast.idl')[0],
         env.Idlc('kill_sessions_remote.idl')[0],
     ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/db/commands/servers',
+    ],
     LIBDEPS_PRIVATE=[
         '$BUILD_DIR/mongo/db/audit',
         '$BUILD_DIR/mongo/db/auth/auth',
@@ -110,7 +113,6 @@ env.Library(
         '$BUILD_DIR/mongo/db/commands/list_databases_command',
         '$BUILD_DIR/mongo/db/commands/map_reduce_parser',
         '$BUILD_DIR/mongo/db/commands/profile_common',
-        '$BUILD_DIR/mongo/db/commands/servers',
         '$BUILD_DIR/mongo/db/commands/set_index_commit_quorum_idl',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/db/commands/write_commands_common',
