SERVER-45127 Increase batchtime for "~ Linux DEBUG WiredTiger develop" build variant temporarily to reduce redness in the waterfall

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -8449,6 +8449,8 @@ buildvariants:
 - <<: *linux-64-debug-template
   name: linux-64-debug-wtdevelop
   display_name: "~ Linux DEBUG WiredTiger develop"
+  # TODO (SERVER-45127): Reset batchtime to default.
+  batchtime: 10080 # 7 days
   modules:
   - wtdevelop
   expansions:
