--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -368,6 +368,7 @@ pipelineEnv.Library(
         'granularity_rounder',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/background',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/rpc/command_status',
     ]
