SERVER-44942 Don't allow drop of out temp collection before index copying
(cherry picked from commit 817a57416b3069ae4738e5bd472d443a6b12f215)
This commit also backports SERVER-45636 Tag out_drop_temp_collection.js as requiring replication and sharding

--- a/src/mongo/db/pipeline/SConscript
+++ b/src/mongo/db/pipeline/SConscript
@@ -458,6 +458,7 @@ pipelineeEnv.Library(
         'parsed_aggregation_projection',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/background',
         '$BUILD_DIR/mongo/db/commands/test_commands_enabled',
         '$BUILD_DIR/mongo/rpc/command_status',
     ]
