SERVER-45168 Create add-only syncronized list type
(cherry picked from commit aa3121c79560efb2c0c7b808eac05e0cf08f20f6)

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -552,6 +552,7 @@ icuEnv.CppUnitTest(
         'procparser_test.cpp' if env.TargetOSIs('linux') else [],
         'producer_consumer_queue_test.cpp',
         'progress_meter_test.cpp',
+        'registry_list_test.cpp',
         'represent_as_test.cpp',
         'safe_num_test.cpp',
         'secure_zero_memory_test.cpp',
