SERVER-43945 Expose out of order latch acquisitions in serverStatus
This review does several related things:
- Modifies the Mutex type to have one Identity object per invocation context
- Adds a latchAnalysis field to serverStatus
- Officially turns on CI-only failure for acq level violations
- Changes a few acq level declarations to be more permissive

--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -463,6 +463,7 @@ mongod = env.Program(
         'util/clock_sources',
         'util/elapsed_tracker',
         'util/fail_point',
+        'util/latch_analyzer',
         'util/net/network',
         'util/ntservice',
         'util/options_parser/options_parser_init',
@@ -571,6 +572,7 @@ mongos = env.Program(
         'transport/transport_layer_manager',
         'util/clock_sources',
         'util/fail_point',
+        'util/latch_analyzer',
         'util/net/ssl_options_server' if get_option('ssl') == 'on' else '',
         'util/ntservice',
         'util/version_impl',
