--- a/buildscripts/resmokeconfig/suites/integration_tests_replset.yml
+++ b/buildscripts/resmokeconfig/suites/integration_tests_replset.yml
@@ -4,6 +4,7 @@ selector:
   root: build/integration_tests.txt
   exclude_files:
   - build/**/mongo/client/client_dbclient_connection_integration_test* # Needs connection to single host.
+  - build/install/bin/client_dbclient_connection_integration_test* # Needs connection to single host.
 
 executor:
   archive:
