SERVER-30622 RollbackChecker should retry on network failures.

--- a/src/mongo/db/repl/SConscript
+++ b/src/mongo/db/repl/SConscript
@@ -1296,6 +1296,7 @@ env.CppUnitTest(
         'oplog_interface_remote',
         'optime',
         'repl_coordinator_impl',
+        'repl_server_parameters',
         'replica_set_messages',
         'replication_consistency_markers_impl',
         'replication_process',
