SERVER-45057 make base64 encode/decode 22x/15x faster

--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -638,6 +638,11 @@ if env.TargetOSIs('windows'):
         ],
     )
 
+env.Benchmark(
+    target='base64_bm',
+    source='base64_bm.cpp',
+)
+
 stacktraceEnv = env.Clone()
 if use_libunwind:
     stacktraceEnv.InjectThirdParty(libraries=['unwind'])
