--- a/buildscripts/resmokeconfig/suites/sharding.yml
+++ b/buildscripts/resmokeconfig/suites/sharding.yml
@@ -3,6 +3,8 @@ test_kind: js_test
 selector:
   roots:
   - jstests/sharding/*.js
+  exclude_files:
+  - jstests/sharding/mrShardedOutput.js
 
 executor:
   config:
