--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -581,6 +581,7 @@ env.Library(
         '$BUILD_DIR/mongo/util/concurrency/thread_pool',
         'catalog_raii',
         'catalog/database_holder',
+        'catalog/collection_catalog',
         'commands/server_status',
         'commands/test_commands_enabled',
         'curop_failpoint_helpers',
