--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -10039,15 +10039,15 @@ buildvariants:
   - name: snmp
   - name: .updatefuzzer
 
-- name: enterprise-rhel-62-64-bit-two-phase-index-builds
-  display_name: "Enterprise RHEL 6.2 (two phase index builds)"
+- name: enterprise-rhel-62-64-bit-single-phase-index-builds
+  display_name: "Enterprise RHEL 6.2 (single phase index builds)"
   modules:
   - enterprise
   run_on:
   - rhel62-small
-  expansions: &enterprise-rhel-62-64-bit-two-phase-index-builds
+  expansions: &enterprise-rhel-62-64-bit-single-phase-index-builds
     test_flags: >-
-      --mongodSetParameters="{enableTwoPhaseIndexBuild: true}"
+      --mongodSetParameters="{enableTwoPhaseIndexBuild: false}"
     compile_flags: >-
       -j$(grep -c ^processor /proc/cpuinfo)
       --ssl
@@ -10072,7 +10072,8 @@ buildvariants:
     distros:
     - rhel62-large
   - name: .rollbackfuzzer
-  - name: sharding_gen
+  - name: .sharding .jscore !.wo_snapshot !.multi_stmt
+  - name: .sharding .common !.multiversion
 
 - name: enterprise-rhel-62-64-bit-coverage
   display_name: "~ Enterprise RHEL 6.2 DEBUG Code Coverage"
