SERVER-45271 Ninja evegreen test executes with wrong ninja file name

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3913,7 +3913,7 @@ tasks:
       params:
         working_dir: src
         shell: bash
-        script: ninja -f all.build.ninja
+        script: ninja -f new.build.ninja
 
 ## compile_all - build all scons targets ##
 - name: compile_all
