--- a/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
+++ b/buildscripts/resmokeconfig/suites/multi_stmt_txn_jscore_passthrough_with_migration.yml
@@ -108,6 +108,7 @@ selector:
   - jstests/core/in.js
   - jstests/core/index8.js # No explicit check for failed command.
   - jstests/core/index_decimal.js
+  - jstests/core/index_large_and_small_dates.js
   - jstests/core/index_multiple_compatibility.js
   - jstests/core/index_partial_write_ops.js
   - jstests/core/indexa.js # No explicit check for failed command.
