--- a/src/mongo/transport/SConscript
+++ b/src/mongo/transport/SConscript
@@ -51,6 +51,7 @@ tlEnv.Library(
     target='transport_layer',
     source=[
         'transport_layer_asio.cpp',
+        env.Idlc('transport_options.idl')[0],
     ],
     LIBDEPS=[
         'transport_layer_common',
@@ -61,7 +62,9 @@ tlEnv.Library(
         '$BUILD_DIR/mongo/db/stats/counters',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/idl/server_parameter',
         '$BUILD_DIR/mongo/util/net/ssl_manager',
+        '$BUILD_DIR/mongo/util/options_parser/options_parser',
         '$BUILD_DIR/third_party/shim_asio',
     ],
 )
