--- a/src/mongo/db/auth/SConscript
+++ b/src/mongo/db/auth/SConscript
@@ -162,6 +162,7 @@ env.Library(
         '$BUILD_DIR/mongo/util/net/ssl_types',
     ],
     LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/util/caching',
         '$BUILD_DIR/mongo/idl/server_parameter',
     ],
 )
