--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -402,6 +402,7 @@ env.Library(
         'default_baton.cpp',
         'operation_context.cpp',
         'operation_context_group.cpp',
+        'operation_key_manager.cpp',
         'service_context.cpp',
         'server_recovery.cpp',
         'unclean_shutdown.cpp',
@@ -1381,6 +1382,21 @@ env.Library(
     LIBDEPS_PRIVATE=[
         'session_catalog',
         'transaction'
+    ],
+)
+
+env.Library(
+    target='operation_killer',
+    source=[
+        'operation_killer.cpp',
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/base',
+        'service_context',
+    ],
+    LIBDEPS_PRIVATE=[
+        '$BUILD_DIR/mongo/db/auth/auth',
+        '$BUILD_DIR/mongo/db/auth/authprivilege',
     ],
 )
 
