--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -23,6 +23,8 @@ selector:
   - jstests/sharding/merge_from_stale_mongos.js
   # Enable when SERVER-44733 is backported
   - jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
+  # Enable when SERVER-43310 is backported
+  - jstests/sharding/cluster_create_indexes_always_routes_through_primary.js
 
 executor:
   config:
