SERVER-45171 Improve handling of transitive dependencies in hygienic

--- a/src/mongo/SConscript
+++ b/src/mongo/SConscript
@@ -185,6 +185,7 @@ baseEnv.Library(
     LIBDEPS_PRIVATE=[
         'util/debugger',
     ],
+    AIB_COMPONENT='platform',
 )
 
 # Shim library for boost to depend on
