--- a/jstests/SConscript
+++ b/jstests/SConscript
@@ -6,6 +6,10 @@ from collections import defaultdict
 Import("env")
 Import("get_option")
 
+# TODO(SERVER-45348): Re-enable installation of the jstests under the
+# self-testable installs project.
+Return()
+
 env = env.Clone()
 
 if not get_option("install-mode") == "hygienic":
