SERVER-44707: Store lastKnownCommittedOpTime in ClientCursor for exhaust getMore

--- a/src/mongo/db/SConscript
+++ b/src/mongo/db/SConscript
@@ -1664,6 +1664,7 @@ env.Library(
     ],
     LIBDEPS=[
         'service_context',
+        '$BUILD_DIR/mongo/db/repl/optime',
         '$BUILD_DIR/mongo/idl/idl_parser',
     ],
 )
