SERVER-42937 Implement Support for OCSP Stapling for OpenSSL

--- a/buildscripts/resmokeconfig/suites/ocsp.yml
+++ b/buildscripts/resmokeconfig/suites/ocsp.yml
@@ -13,3 +13,4 @@ executor:
       tlsCAFile: jstests/libs/ocsp/ca_ocsp.pem
       tlsCertificateKeyFile: jstests/libs/ocsp/client_ocsp.pem
       sslAllowInvalidHostnames: ''
+      setShellParameter: ocspEnabled=true
