SERVER-40805 Indicate reason for replanning

--- a/etc/backports_required_for_multiversion_tests.yml
+++ b/etc/backports_required_for_multiversion_tests.yml
@@ -29,6 +29,8 @@ concurrency_sharded_replication_multiversion:
 replica_sets_jscore_multiversion_passthrough:
 - ticket: SERVER-35921
   test_file: jstests/core/min_max_key.js
+- ticket: SERVER-40805
+  test_file: jstests/core/profile_find.js
 
 replica_sets_multiversion:
 
